--- a/extension/popup.html
+++ b/extension/popup.html
@@ -29,6 +29,7 @@
         <button id="clear-btn">Clear Data</button>
         <button id="reload-btn">Reload Page to Start Monitoring</button>
         <button id="view-data-btn">View Raw Traffic Data</button>
+        <button id="create-ai-prompt-btn">Create AI Prompt</button>
       </div>
 
       <!-- Raw Traffic Data Viewer -->
