Added a monitoring tab that captures events from the traffic data of a website

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -22,6 +22,30 @@
 
       <div id="url"></div>
       
+      <!-- Current Tab Summary -->
+      <div id="current-tab-summary">
+        <h2>Current Tab Summary</h2>
+        <div id="summary-status">Loading summary...</div>
+        <div class="summary-grid">
+          <div class="summary-item">
+            <div class="summary-label">Events Captured</div>
+            <div class="summary-value" id="summary-events">0</div>
+          </div>
+          <div class="summary-item">
+            <div class="summary-label">Unique Domains</div>
+            <div class="summary-value" id="summary-domains">0</div>
+          </div>
+          <div class="summary-item">
+            <div class="summary-label">Monitoring Time</div>
+            <div class="summary-value" id="summary-duration">0s</div>
+          </div>
+          <div class="summary-item">
+            <div class="summary-label">Last Activity</div>
+            <div class="summary-value" id="summary-last-event">—</div>
+          </div>
+        </div>
+      </div>
+      
       <!-- Traffic Stats -->
       <div id="traffic-stats">
         <div id="event-count">Events: 0</div>
